--- a/Final Project Drafts/Website 1/index.html
+++ b/Final Project Drafts/Website 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>John Doe - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -18,6 +18,10 @@
                 <p>Welcome to my personal portfolio. I am a web developer with a passion for creating beautiful and functional websites.</p>
             </section>
             <section>
+                <h2>Skills</h2>
+                <p>HTML, CSS, JavaScript, React, Node.js</p>
+            </section>
+            <section>
                 <h2>Projects</h2>
                 <ul>
                     <li><a href="#">Project 1</a></li>
@@ -27,7 +31,7 @@
             </section>
             <section>
                 <h2>Contact</h2>
-                <p>Email: john.doe@example.com</p>
+                <p>Email: john.doe@portfolio.com</p>
             </section>
         </main>
         <footer>
