--- a/Final Project Drafts/Website 1/index.html
+++ b/Final Project Drafts/Website 1/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>John Doe</h1>
+            <h1>Logan Huffman</h1>
             <p>Web Developer & Designer</p>
         </header>
         <main>
