--- a/Final Project Drafts/Website 1/index.html
+++ b/Final Project Drafts/Website 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Portfolio</title>
+    <title>Logan Huffman - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -31,11 +31,11 @@
             </section>
             <section>
                 <h2>Contact</h2>
-                <p>Email: john.doe@portfolio.com</p>
+                <p>Email: huffmanl@sou.edu</p>
             </section>
         </main>
         <footer>
-            <p>&copy; 2023 John Doe</p>
+            <p>&copy; 2024 Logan Huffman</p>
         </footer>
     </div>
 </body>
