--- a/Final Project/projects.html
+++ b/Final Project/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <title>Projects</title>
 </head>
 <body>
     <nav>
@@ -21,8 +21,20 @@
             <a href="https://www.instagram.com" target="_blank" class="social-button">Instagram</a>
         </div>
     </nav>
-    <h1>About Me</h1>
-    <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
-    <img src="images/about.jpg" alt="About Me Image" />
+    <h1>My Projects</h1>
+    <div class="project-grid">
+        <div class="project-item">
+            <h2>Project 1</h2>
+            <p>Description of project 1.</p>
+        </div>
+        <div class="project-item">
+            <h2>Project 2</h2>
+            <p>Description of project 2.</p>
+        </div>
+        <div class="project-item">
+            <h2>Project 3</h2>
+            <p>Description of project 3.</p>
+        </div>
+    </div>
 </body>
 </html>
