Fixed Dark/Light mode with Java Script

--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -19,10 +19,33 @@
             <a href="https://www.github.com" target="_blank" class="social-button">GitHub</a>
             <a href="https://twitter.com" target="_blank" class="social-button">Twitter</a>
             <a href="https://www.instagram.com" target="_blank" class="social-button">Instagram</a>
+            <button id="theme-toggle" class="social-button">Toggle Dark/Light Mode</button>
         </div>
     </nav>
     <h1>About Me</h1>
     <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
     <img src="images/about.jpg" alt="About Me Image" />
+    <script>
+        const toggleButton = document.getElementById('theme-toggle');
+        const body = document.body;
+
+        // Check localStorage for the saved theme
+        const currentTheme = localStorage.getItem('theme');
+        if (currentTheme) {
+            body.classList.add(currentTheme);
+            toggleButton.textContent = currentTheme === 'dark-mode' ? 'Toggle Light Mode' : 'Toggle Dark Mode';
+        }
+
+        toggleButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            
+            // Save the current theme to localStorage
+            const theme = body.classList.contains('dark-mode') ? 'dark-mode' : '';
+            localStorage.setItem('theme', theme);
+            
+            // Update button text based on mode
+            toggleButton.textContent = body.classList.contains('dark-mode') ? 'Toggle Light Mode' : 'Toggle Dark Mode';
+        });
+    </script>
 </body>
 </html>
