Added Descriptions, update Style

--- a/Final Project/projects.html
+++ b/Final Project/projects.html
@@ -25,22 +25,18 @@
     <h1>My Projects</h1>
     <div class="project-grid">
         <div class="project-item">
-            <h2>Project 1</h2>
-            <p>Description of project 1.</p>
+            <h2>Magic Tea Shop Webpage</h2>
+            <p>A Webpage showcasing a Mystical Tea Shop.</p>
         </div>
         <div class="project-item">
-            <h2>Project 2</h2>
-            <p>Description of project 2.</p>
+            <h2>Drafting Final Project Website</h2>
+            <p>Created four unique websites to both practice making my final website,
+                 and also what design I would use.</p>
         </div>
         <div class="project-item">
-            <h2>Project 3</h2>
-            <p>Description of project 3.</p>
+            <h2>Final Project Website</h2>
+            <p>My Final project is the website your currently on.</p>
         </div>
-    </div>
-    <div class="carousel">
-        <img id="carousel-image" src="images/project1.jpg" alt="Project 1">
-        <button id="prev">Previous</button>
-        <button id="next">Next</button>
     </div>
 
     <script>
