--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -15,10 +15,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="social-media-buttons nav-right">
-            <a href="https://www.linkedin.com" target="_blank" class="social-button">LinkedIn</a>
-            <a href="https://www.github.com" target="_blank" class="social-button">GitHub</a>
-            <a href="https://twitter.com" target="_blank" class="social-button">Twitter</a>
-            <a href="https://www.instagram.com" target="_blank" class="social-button">Instagram</a>
+            <a href="https://github.com/emmortal-1" target="_blank" class="social-button">GitHub</a> <!-- Updated GitHub link -->
             <button id="theme-toggle" class="social-button">Toggle Dark/Light Mode</button>
         </div>
     </nav>
