--- a/Final Project/about.html
+++ b/Final Project/about.html
@@ -20,8 +20,9 @@
         </div>
     </nav>
     <h1>About Me</h1>
-    <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
-    <img src="images/about.jpg" alt="About Me Image" />
+    <p>I am a web developer with a passion for creating functional websites. 
+        I currently study Computer Science at Souther Oregon University.
+    </p>
     <script>
         const toggleButton = document.getElementById('theme-toggle');
         const body = document.body;
