--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -19,9 +19,8 @@
             <button id="theme-toggle" class="social-button">Toggle Dark/Light Mode</button>
         </div>
     </nav>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This website showcases my web development skills.</p>
-    <img src="images/portfolio.jpg" alt="Portfolio Image" />
+    <h1>Welcome to My Portfolio, this is very bare bones at the moment and is bound to change.</h1>
+    <p>This website showcases my web development and other skills.</p>
     <script>
         const toggleButton = document.getElementById('theme-toggle');
         const body = document.body;
