--- a/Final Project/projects.html
+++ b/Final Project/projects.html
@@ -15,7 +15,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="social-media-buttons nav-right">
-            <a href="https://github.com/emmortal-1" target="_blank" class="social-button">GitHub</a> <!-- Updated GitHub link -->
+            <a href="https://github.com/emmortal-1" target="_blank" class="social-button">GitHub</a>
             <button id="theme-toggle" class="social-button">Toggle Dark/Light Mode</button>
         </div>
     </nav>
@@ -23,12 +23,13 @@
     <div class="project-grid">
         <div class="project-item">
             <h2>Magic Tea Shop Webpage</h2>
-            <p>A Webpage showcasing a Mystical Tea Shop.</p>
+            <p>A Webpage showcasing a Mystical Tea Shop. The Github link takes you to the repo that
+                has this website and others inside of it. <a href="https://github.com/emmortal-1/CS-210" target="_blank">View on GitHub</a></p>
         </div>
         <div class="project-item">
-            <h2>Drafting Final Project Website</h2>
-            <p>Created four unique websites to both practice making my final website,
-                 and also what design I would use.</p>
+            <h2>Atlas Analyzer</h2>
+            <p>Not at all a website using HTML but a Python program that allows you to very simply
+                edit csv files and export the changes to a new file. <a href="https://github.com/emmortal-1/Atlas-Analyzer" target="_blank">View on GitHub</a></p>
         </div>
         <div class="project-item">
             <h2>Final Project Website</h2>
